# unfoldfate

./: .gitignore  README.md  initial_prompt.md  package-lock.json  package.json  pyproject.toml  rider-waite-tarot.yaml  unfold_fate.py  unfold_fate_server.js  unfold_fate_server.py  unfoldfate_server2.js  user_stories.md
cypress/e2e/: 22cards.cy.js
prompt_log/: cypress.md  grok3_log.md
views/: card_info.ejs  cards_grid.ejs  index.ejs  update_fragment.ejs
views2/: index.ejs
